initialize "addr" before passing its address to uvm_mmap_dev(). from Onno van der Linden in PR 49536.